# Local_LLM_RPG

./: .gitignore  CMakeLists.txt  LICENSE  LLM.cpp  LLM.h  LlmManager.cpp  LlmManager.h  README.md  game.cpp  game.h  main.cpp
scripts/: copy_dlls.bat  copy_dlls.sh  download_fonts.bat  download_model.bat
trashed/: CMakeLists.txt  Game.cpp  Game.h  LlmManager.cpp  LlmManager.h  main.cpp
